--- a/Changes
+++ b/Changes
@@ -3,3 +3,7 @@ Revision history for Text-Mining
 0.0.4  Wed Mar  4 18:53:51 2009
        Initial release.
 
+0.0.5  Mon Mar  9 17:30:00 2009
+       Added Text::Mining::Shell via Term::Shell
+       
+
