import Text-Mining 0.07 from CPAN
git-cpan-module:   Text-Mining
git-cpan-version:  0.07
git-cpan-authorid: ROGERHALL
git-cpan-file:     authors/id/R/RO/ROGERHALL/Text-Mining-0.07.tar.gz

--- a/README
+++ b/README
@@ -1,8 +1,7 @@
-Text-Mining version 0.0.5
+Text-Mining version 0.0.7
 
-Perl Tools for Text Mining can either be used via a 
-shell with TM specific commands or in your own 
-perl scripts.
+Perl Tools for Text Mining can either be used via a shell with TM specific 
+commands or in your own perl scripts.
 
 INSTALLATION
 
@@ -13,6 +12,7 @@ To install this module, run the following commands:
 	make test
 	make install
 
+Scripts must be copied somewhere reasonable.
 
 DEPENDENCIES
 
