--- a/Changes
+++ b/Changes
@@ -1,9 +1,15 @@
 Revision history for Text-Mining
 
-0.0.4  Wed Mar  4 18:53:51 2009
-       Initial release.
-
+0.0.7  Tue Mar 10 14:30:00 2009
+       Documentation. Save working directory. Create scripts/kodos.
+       
+0.0.6  Tue Mar 10 11:30:00 2009
+       Added shell history, cd, pwd, dir
+       
 0.0.5  Mon Mar  9 17:30:00 2009
        Added Text::Mining::Shell via Term::Shell
        
+0.0.4  Wed Mar  4 18:53:51 2009
+       Initial release.
+
 
