import Text-Mining 0.08 from CPAN
git-cpan-module:   Text-Mining
git-cpan-version:  0.08
git-cpan-authorid: ROGERHALL
git-cpan-file:     authors/id/R/RO/ROGERHALL/Text-Mining-0.08.tar.gz

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-Text-Mining version 0.0.7
+Text-Mining version 0.0.8
 
-Perl Tools for Text Mining can either be used via a shell with TM specific 
+Perl Tools for Text Mining Research can either be used via a shell with TM specific 
 commands or in your own perl scripts.
 
 INSTALLATION
@@ -26,6 +26,7 @@ DEPENDENCIES
  Time::HiRes
  DBIx::MySperqlOO
  File::Spec
+ Module::Runtime
 
 AUTHORS
 
